<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">海豚FM</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">打开</string>
    <string name="drawer_close">关闭</string>
    <string name="login_message">登录中...</string>
    <string name="login">登录</string>
    <string name="error_internet">网络错误,请稍候尝试!</string>
    <!-- 上拉下拉 -->
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">释放立即刷新</string>
    <string name="xlistview_header_hint_loading">正在刷新...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="old_password">旧 密 码：</string>
    <string name="old_password_hint">请输入旧密码</string>
    <string name="new_password">新 密 码：</string>
    <string name="new_password2">确认密码：</string>
    <string name="new_password_hint">请输入新密码</string>
    <string name="update_password">修改</string>
    <string name="show_password">显示密码</string>
    <string name="nickname">昵        称：</string>
    <string name="personalText">个性签名：</string>
    <string name="phone">手机号码：</string>
    <string name="email_name">邮箱地址：</string>
    <string name="cancel">取消</string>
    <string name="ensure">确定</string>
    <string name="title">title</string>
    <string name="content">content</string>
    <string name="time">10-1</string>
    <string name="loading">加载中...</string>
    <string name="usersetting_touxiang">头像</string>
    <string name="usersetting_info">个人信息修改</string>
    <string name="usersetting_password">密码修改</string>
    <string name="str_hostinfo_name">主持人</string>
    <string name="str_hostinfo_music">音乐</string>
    <string name="str_update">软件更新</string>
    <string name="str_update_progress">更新进度:</string>
    <string name="str_update_background">后台下载</string>
    <string name="str_update_cancel">取消下载</string>
    <string name="downloading">正在下载</string>
    <string name="downloaded">下载完成</string>
    <string name="download_hint">没有下载任务</string>
    <string name="setting_safe">安全与账号</string>
    <string name="setting_exit">退出</string>
    <string name="setting_update">检查更新</string>
    <string name="exit_radio">退出电台</string>
    <string name="exit_account">退出账户</string>
    <string name="find_remimd">数据加载失败,请下拉刷新</string>
    <string name="remimd">数据加载失败，请重新加载或检查网络连接</string>
    <string name="search_content_remimd">没有搜索到相关内容</string>
    <string name="search_hint">搜索</string>
    <string name="search_all">搜全部</string>
    <string name="search_program">搜节目</string>
    <string name="search_program_list">搜播单</string>
    <string name="search_user">搜会员</string>
    <string name="search_number">搜索结果（0）</string>
    <string name="user_login_remind">您尚未登录，请登录查看</string>
    <string name="dialog_text">确认要删除该节目单吗?</string>
    <string name="submit">提交</string>
    <string name="search_remind">没有搜索到相关的内容</string>
    <string name="suggestion_title">您的意见：</string>
    <string name="ok">确定</string>
    <string name="find">发现</string>
    <string name="ranking">排行榜</string>
    <string name="default_program">设置默认节目</string>
    <string name="program">节目：</string>
    <string name="DIY_time">自定义播放时长</string>
    <string name="hint_input">设定时间</string>
    <string name="editor">编辑</string>
    <string name="explain">点击浅蓝色部分可以拖动排序</string>
    <string name="delete">删除</string>
    <string name="slogan">悦耳动心</string>
    <string name="dialog_download_title">选择要下载的节目</string>
    <string name="loading_setting">正在检查中...</string>
    <string name="network_remind">没有检测到Wifi，您现在使用的是3G或4G网络播放节目，是否继续播放</string>

</resources>