<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <include layout="@layout/toolbar"/>
    <TextView 
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/old_password"/>
    <EditText 
        android:id="@+id/et_old_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/old_password_hint"
        android:textColor="#000000"
        android:padding="6dp"
        android:inputType="textPassword"
        android:background="#FFFFFF"/>
    <TextView 
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_password"/>
    <EditText 
        android:id="@+id/et_new_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/new_password_hint"
        android:inputType="textPassword"
        android:padding="6dp"
        android:textColor="#000000"
        android:background="#FFFFFF"/>
    <TextView 
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_password2"/>
    <EditText 
        android:id="@+id/et_repeat_new_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:inputType="textPassword"
        android:hint="确认新密码"
        android:padding="6dp"
        android:textColor="#000000"
        android:background="#FFFFFF"/>
    <Button 
        android:id="@+id/bt_sure"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ensure"
        android:background="@drawable/corners_gray_bg"
        android:enabled="false"
        android:layout_margin="15dp"/>
    <CheckBox 
        android:id="@+id/cb_show_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_password"/>
    

</LinearLayout>
