<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical" >
    
    <TextView 
        android:layout_width="match_parent"
        android:layout_height="7dp"
        android:background="@color/red"/>

    <TextView
        android:id="@+id/delete_dialog_tv"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginLeft="8dp"
        android:gravity="center_vertical"
        android:text="@string/dialog_text" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/delete_dialog_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#888888"
            android:layout_marginRight="10dp"
            android:textColor="@color/white"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/delete_dialog_sure"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:background="@color/red"
            android:textColor="@color/white"
            android:text="@string/ensure" />
    </LinearLayout>

</LinearLayout>