<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true" >

    <LinearLayout
        android:id="@+id/search_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FF0000"
        android:orientation="horizontal"
        android:paddingBottom="10dp"
        android:paddingLeft="9dp"
        android:paddingRight="9dp"
        android:paddingTop="12dp" >

        <ImageView
            android:id="@+id/search_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:clickable="true"
            android:src="@drawable/abc_ic_ab_back_mtrl_am_alpha" />

        <EditText
            android:id="@+id/search_edit"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:background="@drawable/edit_background"
            android:drawableLeft="@drawable/icon_search"
            android:hint="@string/search_all"
            android:padding="3dp"
            android:singleLine="true"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/search_sure"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:background="#ffffff"
            android:clickable="true"
            android:gravity="center_vertical"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:text="@string/search_hint" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/search_classify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/search_top"
        android:layout_margin="5dp"
        android:background="@drawable/search_classify_bg"
        android:orientation="horizontal"
        android:padding="2dp" >

        <TextView
            android:id="@+id/search_all"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#ff3333"
            android:clickable="true"
            android:gravity="center"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="@string/search_all"
            android:textColor="#ffffff" />

        <TextView
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="#ff3333" />

        <TextView
            android:id="@+id/search_program_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:gravity="center"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="@string/search_program_list" />

        <TextView
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="#ff3333" />

        <TextView
            android:id="@+id/search_program"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:gravity="center"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="@string/search_program" />

        <TextView
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="#ff3333" />

        <TextView
            android:id="@+id/search_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:gravity="center"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="@string/search_user" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/search_number_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/search_classify"
        android:orientation="vertical" >
        
        <TextView 
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray"/>

        <TextView
            android:id="@+id/search_number_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/search_number"
            android:visibility="gone" />
        
        <TextView 
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray"/>
    </LinearLayout>

    <ListView
        android:id="@+id/search_lv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/search_number_ll" >
    </ListView>

    <TextView
        android:id="@+id/search_tv_content_remind"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/search_number_ll"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/search_content_remimd"
        android:visibility="gone" />

    <com.example.toolbar.view.progress.CircularProgress
        xmlns:app="http://schemas.android.com/apk/res/com.example.strawberryradio"
        android:id="@+id/search_progress"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_centerInParent="true"
        android:visibility="gone"
        app:borderWidth="3dp" />

    <TextView
        android:id="@+id/search_tv_net_remind"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/remimd"
        android:textSize="17sp"
        android:visibility="gone" />

</RelativeLayout>