<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <include layout="@layout/toolbar" />
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:padding="7dp"
        android:orientation="horizontal">
        <TextView 
            android:id="@+id/select_program_tv_munber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_gravity="center_vertical"
            android:textSize="17sp"
            android:text="已选择（）个节目"/>
        <Button 
            android:id="@+id/select_program_bt_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button"
            android:textColor="#ffffff"
            android:text="@string/submit"/>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <com.example.toolbar.pulltorefreshlistview.PullToRefreshListView
            xmlns:ptr="http://schemas.android.com/apk/res/com.example.strawberryradio"
            android:id="@+id/pull_refresh_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="3dp"
            android:divider="#00000000"
            android:focusable="true"
            android:padding="10dp"
            android:scrollbars="@null"
            ptr:mode="both" />
        <TextView
            android:id="@+id/selectProgram_remind_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:visibility="gone"
            android:text="@string/search_remind"/>
        <TextView
            android:id="@+id/selectProgram_remind_net"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:visibility="gone"
            android:text="@string/remimd"/>

        <com.example.toolbar.view.progress.CircularProgress
            xmlns:app="http://schemas.android.com/apk/res/com.example.strawberryradio"
            android:id="@+id/progress"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerInParent="true"
            app:borderWidth="3dp" />
    </RelativeLayout>

</LinearLayout>